--- a/web/src/css/fileInput.css
+++ b/web/src/css/fileInput.css
@@ -4,4 +4,5 @@ input[type="file"]::-webkit-file-upload-button {
   border-style: solid;
   box-sizing: border-box;
   border-radius: 0.375rem;
+  margin-right: 1em;
 }
